--- a/views/layouts/main-layout.pug
+++ b/views/layouts/main-layout.pug
@@ -21,7 +21,7 @@ html(lang="en")
             a.blue(href="/")
               i.fas.fa-dove
           li
-            a(href="")
+            a(href="/")
               i.fas.fa-home
           li
             a(href="/search")
@@ -41,6 +41,7 @@ html(lang="en")
       .mainSectionContainer.col-10.col-md-8.col-lg-6
         .titleContainer
           h1 #{ pageTitle }
+          block headerButton
         block content
       .d-none.d-md-block.col-md-2.col-lg-4
 
