--- a/views/chatPage.pug
+++ b/views/chatPage.pug
@@ -9,7 +9,7 @@ block content
     .chatPageContainer
       .chatTitleBarContainer
         +createChatImage(chat, userLoggedIn)
-        span#chatName This is the chat
+        span#chatName(data-toggle='modal', data-target='#chatNameModal') #{ chat.chatName }
       .mainContainer
         .chatContainer
           .chatMessages
@@ -17,5 +17,6 @@ block content
             textarea(name="messageInput", placeholder="Type a message...")
             button.sendMessageButton
               i.fas.fa-paper-plane
+    +createChatNameModal(chat)
 block scripts
   script(src="/js/chatPage.js") 
