--- a/views/mixins/mixins.pug
+++ b/views/mixins/mixins.pug
@@ -121,6 +121,34 @@ mixin createUnpinPostModal()
 mixin createChatImage(chatData, userLoggedIn)
   if(!chatData)
     return
+  - let i = 0
+  - const maxImageToShow = 3
+  - let remainingUsers = chatData.users.length - maxImageToShow
+  - remainingUsers-- 
+  //- 減 1，不需要顯示使用者自己的頭像
   .chatImageContainer
+    if remainingUsers > 0
+      .userCount
+        span +#{ remainingUsers }
     each user in chatData.users
+      if chatData.users.length != 1 && user._id == userLoggedIn._id
+        -continue
+      //- chatData.users.length != 1，如果對話裡只有一個人，那就是使用者自己
+      else if i >= maxImageToShow
+        -break
       img(src=user.profilePic, alt="User's profile picture", title=user.firstName)
+      - i++
+
+mixin createChatNameModal(chat)
+  #chatNameModal.modal.fade(tabindex='-1', role='dialog', aria-labelledby='chatNameModalLabel', aria-hidden='true')
+    .modal-dialog(role='document')
+      .modal-content
+        .modal-header
+          h5#chatNameModalLabel.modal-title Change the chat name
+          button.close(type='button', data-dismiss='modal', aria-label='Close')
+          span(aria-hidden='true') &times;
+        .modal-body
+          input#chatNameTextBox(type="text", placeholder="Enter a name for this chat", value=chat.chatName)
+        .modal-footer
+          button.btn.btn-secondary(type='button', data-dismiss='modal') Cancel
+          button#chatNameButton.btn.btn-primary(type='button') Save
