--- a/views/chatPage.pug
+++ b/views/chatPage.pug
@@ -12,7 +12,7 @@ block content
         span#chatName(data-toggle='modal', data-target='#chatNameModal') #{ chat.chatName }
       .mainContainer
         .chatContainer
-          .chatMessages
+          ul.chatMessages
           .footer
             textarea.inputTextBox(name="messageInput", placeholder="Type a message...")
             button.sendMessageButton
