--- a/public/css/main.css
+++ b/public/css/main.css
@@ -20,6 +20,10 @@ html, body {
   font-weight: 400;
 }
 
+ul {
+  margin: 0;
+}
+
 * {
   outline: none !important;
 }
@@ -182,6 +186,7 @@ button i, button span {
 .mainContentContainer {
   flex: 1;
   display: flex;
+  overflow-y: hidden;
 }
 
 .postContentContainer {
@@ -470,6 +475,7 @@ button i, button span {
   flex-direction: column;
   min-height: 0;
   flex: 1;
+  flex-basis: 0;
 }
 
 .mainContainer {
@@ -684,15 +690,25 @@ button i, button span {
   display: flex;
   align-items: flex-end;
   flex-shrink: 0;
-  -webkit-flex: 0;
 }
 
+.typingDots img,
 .chatMessages .message .messageBody {
   background-color: #f1f0f0;
   padding: 6px 12px;
   border-radius: 18px;
   font-size: 14px;
   word-break: break-all; 
+}
+
+.typingDots {
+  padding: 0 var(--spacing);
+  display: none;
+  padding-bottom: 0;
+}
+
+.typingDots img {
+  height: 48px;
 }
 
 .chatMessages .message .messageContainer {
@@ -762,4 +778,17 @@ button i, button span {
 
 .chatMessages .message.last {
   margin-bottom: 5px;
+}
+
+.loadingSpinnerContainer {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
+}
+
+.loadingSpinnerContainer img {
+  width: 50%;
+  max-width: 75px;
 }
