--- a/views/layouts/main-layout.pug
+++ b/views/layouts/main-layout.pug
@@ -27,7 +27,7 @@ html(lang="en")
             a(href="/search")
               i.fas.fa-search
           li
-            a(href="/notification")
+            a(href="/notifications")
               i.fas.fa-bell
           li
             a(href="/messages")
