--- a/public/css/main.css
+++ b/public/css/main.css
@@ -792,3 +792,7 @@ button i, button span {
   width: 50%;
   max-width: 75px;
 }
+
+.resultListItem.active {
+  background-color: var(--blueBackground);
+}
