--- a/views/notificationsPage.pug
+++ b/views/notificationsPage.pug
@@ -7,4 +7,4 @@ block headerButton
     i.far.fa-plus-square
 
 block scripts 
-  script(src="/js/notificationsPage.js") 
+  script(src="/js/notificationPage.js") 
