--- a/public/css/main.css
+++ b/public/css/main.css
@@ -76,6 +76,7 @@ nav a {
   justify-content: center;
   align-items: center;
   color: #212529;
+  position: relative;
 }
 
 nav a.blue {
@@ -795,4 +796,26 @@ button i, button span {
 
 .resultListItem.active {
   background-color: var(--blueBackground);
+}
+
+#notificationBadge,
+#messagesBadge {
+  background-color: var(--red);
+  height: 25px;
+  width: 25px;
+  border-radius: 50%;
+  position: absolute;
+  top: 0;
+  right: 0;
+  color: #fff;
+  font-size: 18px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  visibility: hidden;
+}
+
+#notificationBadge.active,
+#messagesBadge.active {
+  visibility: visible;
 }
