--- a/views/layouts/main-layout.pug
+++ b/views/layouts/main-layout.pug
@@ -29,9 +29,11 @@ html(lang="en")
           li
             a(href="/notifications")
               i.fas.fa-bell
+              span#notificationBadge
           li
             a(href="/messages")
               i.fas.fa-envelope
+              span#messagesBadge
           li
             a(href="/profile")
               i.fas.fa-user
