--- a/views/notificationsPage.pug
+++ b/views/notificationsPage.pug
@@ -3,8 +3,8 @@ extends layouts/main-layout.pug
 block content
   .resultsContainer
 block headerButton
-  a(href="/messages/new")
-    i.far.fa-plus-square
+  button#markNotificationAsRead
+    i.fas.fa-check-double
 
 block scripts 
   script(src="/js/notificationPage.js") 
