--- a/public/css/main.css
+++ b/public/css/main.css
@@ -819,3 +819,18 @@ button i, button span {
 #messagesBadge.active {
   visibility: visible;
 }
+
+#notificationList {
+  position: fixed;
+  top: 5px;
+  right: 5px;
+  width: 360px;
+  background-color: #fff;
+  box-shadow: 0 1px 4px rgba(0, 0, 0, 0.3);
+  -webkit-box-shadow: 0 1px 4px rgba(0, 0, 0, 0.3);
+  -moz-box-shadow: 0 1px 4px rgba(0, 0, 0, 0.3);
+}
+
+#notificationList .active {
+  background-color: #fff;
+}
