--- a/views/chatPage.pug
+++ b/views/chatPage.pug
@@ -13,7 +13,7 @@ block content
       .mainContainer
         .loadingSpinnerContainer
           img(src="/images/loading.gif", alt="Loading spinner")
-        .chatContainer(style="visibility: hidden")
+        .chatContainer(style="visibility: hidden", data-room=chat._id)
           ul.chatMessages
           .typingDots
             img(src="/images/dots.gif", alt="Typing dots")
